--- a/loginRegister.css
+++ b/loginRegister.css
@@ -97,7 +97,7 @@ input[type=button], input[type=submit], input[type=reset] {
   cursor: pointer;
 }
 
-input[type=text], select, textarea {
+input[type=text], [type=password], select, textarea {
   width: 60%;
   padding: 12px;
   border: 1px solid #ccc;
