--- a/Report.css
+++ b/Report.css
@@ -54,7 +54,10 @@ li a:hover {
 }
 
 #report_block {
-	background-color: #111;
+	background-color: #333;
+	border-style: solid;
+	border-color: black;
+	border-width: 3px;
 	width: 400px;
 	display: block;
 	text-align: center;
