--- a/SuggestAnime.css
+++ b/SuggestAnime.css
@@ -4,11 +4,22 @@
 
 
 #titleSuggested{
-  top: 200px;
+  left: 30%;
   display: block;
-  
 }
 
+.titleText{
+  font-family: Bada;
+}
+
+#descriptionSuggested{
+  
+  display: block;
+}
+
+.submitSuggestionButton{
+  display: block;
+}
 
 #Anime div{
   padding: 3px;
@@ -22,7 +33,8 @@
 #Anime{
   border: 10px;
   border-color: black;
-
+  position: absolute;
+  left: 30%;
 }
 
 .AnimeDescription {
