Updated background colour

--- a/mainPage.css
+++ b/mainPage.css
@@ -23,7 +23,7 @@ body {
 	display: block;
   margin: 0px;
 	text-align: center;
-	background: #D85428;
+	background: #f6d3c0;
 }
 
 #NavigationBar ul {
