--- a/views/Anime.hbs
+++ b/views/Anime.hbs
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="header">
-		<h1>Great Anime List{{animeName}}</h1>
+		<h1>Great Anime List</h1>
 	</div>
 	<div id="NavigationBar">
 		<ul>
