--- a/views/Anime.hbs
+++ b/views/Anime.hbs
@@ -4,7 +4,7 @@
 <head> 
 	<meta charset="utf-8">
 	<title>Anime Page</title>
-	<link rel="stylesheet" type="text/css" href="/Anime.css">
+	<link rel="stylesheet" type="text/css" href="/style/Anime.css">
 </head>
 
 
