Added correct paths to admin

--- a/public/style/User_Profile.css
+++ b/public/style/User_Profile.css
@@ -35,7 +35,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -132,8 +131,10 @@ li a:hover {
 #userName{
   float: right;
 }
+#left{
+  float:left ;
+}
 
 #logout {
-  position: absolute;
-  right: 10px;
+  float: right;
 }
