--- a/views/User_Profile.hbs
+++ b/views/User_Profile.hbs
@@ -18,7 +18,7 @@
 		<li id = "left"><a href="/AllAnime">All Anime List</a></li>	
 		<li id = "left"><a href="/SuggestAnime">Request an Anime</a></li>
 		<li id = "logout"><a id = "l1" href="/users/logout">Log out</a></li>
-		<li id = "userName"><a href="/userprofile">Hello, {{userName}}</a></li>
+		<li id = "userName"><a id = "l2" href="/userprofile">Hello, {{userName}}</a></li>
 		
 	</ul>
  </div>
@@ -58,6 +58,7 @@
 
  <script type="text/javascript" src="/js/User_Profile.js"></script>
  <script type="text/javascript" src="/js/changeLogin.js"></script>
+ <script>var x = "{{userName}}"; update(x);</script>
  </body>
 
  </html>
