CSS changes site wide

--- a/public/style/Admin.css
+++ b/public/style/Admin.css
@@ -1,5 +1,5 @@
 
- @font-face { font-family: Delicious; src: url('MADEC___.TTF'); }
+ @font-face { font-family: Delicious; src: url('JosefinSans-Regular.ttf'); }
 
 .header {
   height: 30px; 
