--- a/public/style/SuggestAnime.css
+++ b/public/style/SuggestAnime.css
@@ -1,7 +1,19 @@
 
-@font-face { font-family: Delicious; src: url('MADEC___.TTF'); }
-@font-face { font-family: Bada; src: url('Adventure.OTF'); }
+@font-face { font-family: Delicious; src: url('JosefinSans-Regular.ttf'); }
+@font-face { font-family: Bada; src: url('JosefinSans-Regular.ttf'); }
 
+
+.header {
+  height: 30px; 
+  padding-top: 10px;
+  margin-top: 0px;
+  border-top: 0px;
+  text-align: center;
+  background: #D85428;
+  color: white;
+  font-size: 20px;
+
+}
 
 #titleSuggested{
   left: 30%;
