--- a/public/style/User_Profile.css
+++ b/public/style/User_Profile.css
@@ -1,6 +1,6 @@
 
-@font-face { font-family: Delicious; src: url('MADEC___.TTF'); }
-@font-face { font-family: Bada; src: url('Adventure.OTF'); }
+@font-face { font-family: Delicious; src: url('JosefinSans-Regular.ttf'); }
+@font-face { font-family: Bada; src: url('JosefinSans-Regular.ttf'); }
  
 
 .header {
