--- a/views/User_Profile.hbs
+++ b/views/User_Profile.hbs
@@ -30,8 +30,8 @@
  <div id="ProfileInfo">
  	<h1>Profile Information</h1>
  	<ul>
- 		<li class="name"><h2>Name: Black Ninja</h2></li>
- 		<li class="email"><h2>Email: black.ninja@gmail.com</h2></li>
+ 		<li class="name"><h2>Name: {{userName}}</h2></li>
+ 		<li class="email"><h2>Email: {{email}}</h2></li>
  		<li class="dob"><h2>Date of Birth: 01/01/1995</h2></li>
  	</ul>
  </div>
