--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,11 +14,13 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="/index">Home</a></li>
-			<li><a href="/AllAnime">All Anime List</a></li>	
-			<li><a href="/SuggestAnime">Request an Anime</a></li>
-			<li id = "userName"><a href="/login">Login/Register</a></li>
-		</ul>
+		<li id = "left"><a href="/index">Home</a></li>
+		<li id = "left"><a href="/AllAnime">All Anime List</a></li>	
+		<li id = "left"><a href="/SuggestAnime">Request an Anime</a></li>
+		<li id = "logout"><a id = "l1" href="/users/logout">Log out</a></li>
+		<li id = "userName"><a id = "l2" href="/userprofile">Hello, {{userName}}</a></li>
+		
+	</ul>
 	</div>
  	<div class="anime_info">
 		<div class="trending_anime">
@@ -50,6 +52,8 @@
 	
 	<script type="text/javascript" src="/js/mainPage.js"></script>
 	<script type="text/javascript" src="/js/Anime.js"></script>
+	 <script type="text/javascript" src="/js/changeLogin.js"></script>
+ 	<script>var x = "{{userName}}"; update(x);</script>
 
  </body>
 
