fixed nav bar styling

--- a/public/style/Admin.css
+++ b/public/style/Admin.css
@@ -32,7 +32,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -83,7 +82,13 @@ table, td, th {
 	text-align: center;
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left ;
+}
+
+#logout {
+  float: right;
 }
