--- a/public/style/AllAnime.css
+++ b/public/style/AllAnime.css
@@ -35,7 +35,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -237,7 +236,13 @@ td img:hover {
   background-color: white;
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left ;
+}
+
+#logout {
+  float: right;
 }
