--- a/public/style/Report.css
+++ b/public/style/Report.css
@@ -33,7 +33,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -94,7 +93,13 @@ p {
 	color: white;
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left ;
+}
+
+#logout {
+  float: right;
 }
