--- a/public/style/SuggestAnime.css
+++ b/public/style/SuggestAnime.css
@@ -102,7 +102,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -122,9 +121,15 @@ li a:hover {
   background-color: #111;
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left ;
+}
+
+#logout {
+  float: right;
 }
 
 .titleTextBox {
@@ -148,4 +153,5 @@ li a:hover {
   background-color: #FBF4EE;
   resize: none;
 }
+
 
