--- a/public/style/loginRegister.css
+++ b/public/style/loginRegister.css
@@ -35,7 +35,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -109,7 +108,13 @@ input[type=submit]:hover {
   background-color: #595959;
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left;
+}
+
+#logout {
+  float: right;
 }
