--- a/public/style/mainPage.css
+++ b/public/style/mainPage.css
@@ -35,7 +35,6 @@ body {
 }
 
 #NavigationBar ul li {
-  float: left;
   border-right:1px solid #bbb;
 }
 
@@ -211,8 +210,14 @@ input[type=submit]:hover {
   
 }
 
-#userName {
-  position: absolute;
-  right: 10px;
+#userName{
+  float: right;
+}
+#left{
+  float:left ;
+}
+
+#logout {
+  float: right;
 }
 
