Added some feedback for registering

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -36,6 +36,8 @@
 			<br><br>
 			<input id="confPassword" class="input_element" type="password" placeholder="Confirm password">
 			<br><br>
+			<p id = "feedback" >Please fill in the fields</p>
+			<br><br>
 		
 			<input id="register" type="submit" value="Register">
 		</form>
