--- a/views/User_Profile.hbs
+++ b/views/User_Profile.hbs
@@ -24,23 +24,22 @@
  </div>
 
  <div id="ProfilePicture">
- 		<img src="ninja.png"  alt="Avatar" class="avatar">
+ 		<img src="/img/avatar.svg"  alt="Avatar" class="avatar">
  </div>
 
  <div id="ProfileInfo">
  	<h1>Profile Information</h1>
  	<ul>
- 		<li class="name"><h2>Name: {{userName}}</h2></li>
- 		<li class="email"><h2>Email: {{email}}</h2></li>
- 		<li class="dob"><h2>Date of Birth: 01/01/1995</h2></li>
+ 		<li class="name"><h2>userName:<span id = "username"> {{userName}}</span></h2></li>
+ 		<li class="email"><h2>Email:<span id = "email"> {{email}}</span></h2></li>
+ 		<li class="dob"><h2>Date of Birth:<span id = "dob"> {{dob}}</span></h2></li>
  	</ul>
  </div>
 
  <div id="ProfileStatistics">
  	<h1>Statistics</h1>
  	<ul>
- 		<li><h2>Number of Review(s): 2</h2></li>
- 		<li><h2>Favorite Anime: DeathNote</h2></li>
+ 		<li><h2>Number of Review(s):<span id = "numReviews"> {{reviewCount}}</span></h2></li>
  		<li><h2>Pending Reports(s): 0</h2></li>
  	</ul>
  </div>
