Added feedback for login

--- a/views/LoginRegister.hbs
+++ b/views/LoginRegister.hbs
@@ -32,6 +32,7 @@
 			<br><br>
 			<input id="login" type="submit" value="Login">
 			<input id="register" type="submit" value="Register">
+			<p id = "feedback" >Enter your credentials</p>
 		</form>
 	
 	</div>
