--- a/views/User_Profile.hbs
+++ b/views/User_Profile.hbs
@@ -30,7 +30,7 @@
  <div id="ProfileInfo">
  	<h1>Profile Information</h1>
  	<ul>
- 		<li class="name"><h2>userName:<span id = "username"> {{userName}}</span></h2></li>
+ 		<li class="name"><h2>Username:<span id = "username"> {{userName}}</span></h2></li>
  		<li class="email"><h2>Email:<span id = "email"> {{email}}</span></h2></li>
  		<li class="dob"><h2>Date of Birth:<span id = "dob"> {{dob}}</span></h2></li>
  	</ul>
@@ -40,7 +40,7 @@
  	<h1>Statistics</h1>
  	<ul>
  		<li><h2>Number of Review(s):<span id = "numReviews"> {{reviewCount}}</span></h2></li>
- 		<li><h2>Pending Reports(s): 0</h2></li>
+ 		<li><h2>Pending Reports(s):<span id = "numReports"> {{reportCount}}</span></h2></li>
  	</ul>
  </div>
 
