updated report visuals

--- a/public/style/Anime.css
+++ b/public/style/Anime.css
@@ -141,3 +141,14 @@ button:hover {
   background-color: #595959;
 }
 
+.titleTextBox {
+  width: 100%;
+  height: 50px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #FBF4EE;
+  resize: none;
+}
+
