--- a/public/style/Report.css
+++ b/public/style/Report.css
@@ -21,7 +21,8 @@ body {
 	display: block;
     margin: 0px;
 	text-align: center;
-	background: #D85428;
+	background-color: #f6d3c0;
+    font-family: Delicious;
 }
 
 #NavigationBar ul {
@@ -58,7 +59,8 @@ li a:hover {
 	border-style: solid;
 	border-color: black;
 	border-width: 3px;
-	width: 400px;
+	border-radius: 3%;
+	width: 500px;
 	display: block;
 	text-align: center;
 	position: absolute;
@@ -103,4 +105,54 @@ p {
 
 #logout {
   float: right;
+}
+
+#name {
+  width: 90%;
+  height: 30px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #FBF4EE;
+  resize: none;
+
+}
+
+#anime {
+  width: 90%;
+  height: 30px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #FBF4EE;
+  resize: none;
+
+}
+
+#reason_box {
+  width: 90%;
+  height: 100px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #FBF4EE;
+  resize: none;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  border-radius: 5px;
+  background-color: #474747;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #595959;
 }
