Changed site name

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,14 +3,14 @@
 
 <head> 
  	<meta charset="utf-8">
-    <title>Great Anime List</title>
+    <title>My Great Otaku List</title>
     <link rel="stylesheet" type="text/css" href="./style/mainPage.css">
  </head>
 
 
  <body onload="update_main_page();">
  	<div class="header">
-  		<h1>Great Anime List</h1>
+  		<h1>My Great Otaku List</h1>
 	</div>
 	<div id="NavigationBar">
 		<ul>
