--- a/public/style/AllAnime.css
+++ b/public/style/AllAnime.css
@@ -230,7 +230,15 @@ tr:nth-child(even) {
 }
 
 img{
+  
+  position: relative;
+  float: left;
+  width:  100px;
   height: 100px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+  object-fit: contain;
 }
 
 td img:hover {
