--- a/public/style/Anime.css
+++ b/public/style/Anime.css
@@ -6,36 +6,45 @@
   font-family: Bada;
   position: relative;
   font-size: 70px;
+  padding-left:: 5%;
 }
 
 .newReport{
   top: 40px;
   position: relative;
+  border-radius: 5%;
+
 }
 
 .animeReviews{
    top: 40px;
   position: relative;
+  border-radius: 5%;
+ 
 }
 
 .animeImage{
   position: absolute;
   font-size: 70px;
+  border: 3px solid white;
+  border-radius: 3%;
 }
 .animeDescription{
   font-size: 20px;
   width: 80%;
   height: 300px;
   display:block;
+  padding-left: 5%;
 }
 
 #Anime div{
   position: relative;
   left: 20%;
-  padding: 3px;
+  padding: 5%;
   border: 1px;
   color: black;
   display:block;
+
 }
 
 #Anime{
@@ -46,7 +55,7 @@
   left: 5%;
   top: 15%;
   right: 5%;
-  border-radius: 10%;
+  border-radius: 3%;
   padding: 5%;
 
 }
@@ -150,5 +159,23 @@ button:hover {
   border-radius: 4px;
   background-color: #FBF4EE;
   resize: none;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  border-radius: 3%;
+}
+
+td, th {
+
+  text-align: left;
+  padding: 8px;
+  border-radius: 3%;
+}
+
+tr:nth-child(even) {
+  background-color: #DDBDAC;
 }
 
