--- a/public/style/Admin.css
+++ b/public/style/Admin.css
@@ -18,9 +18,10 @@
 }
 
 body {
-  
-  
-	background: #f6d3c0;
+	display: block;
+  margin: 0px;
+  text-align: center;
+  background: #f6d3c0;
   align-content: center;
 }
 
@@ -51,7 +52,7 @@ body {
 }
 
 li a:hover {
-  background-color: #f6d3c0;
+  background-color: #111;
   text-align: center;
 }
 
@@ -59,18 +60,22 @@ table, td, th {
 	border-collapse: collapse;
 	border: 1px solid black;
   align-content: center;
-  border-radius: 3%;
+  border-radius: 5%;
 }
 
 #ContentBlocks {
-	display: block;
+  margin: auto;
+  width: 60%;
+  border: 3px solid #333;
+  padding: 10px;
+  align-items: center;
   align-content: center;
-  border-radius: 3%;
-  width: 100%
+  align-self: center;
+
 }
 
 #ReportInfo {
-	width: 700px;
+	width: 90%;
 	border-style: solid;
 	border-color: black;
 	border-width: 3px;
@@ -78,11 +83,12 @@ table, td, th {
 	background: #333;
 	color: white;
 	text-align: center;
-  align-content: center;
+  align-self: center;
+
 }
 
 #AnimeApprovals {
-	width: 700px;
+	width: 90%;
 	border-style: solid;
 	border-color: black;
 	border-width: 3px;
@@ -90,6 +96,7 @@ table, td, th {
 	background: #333;
 	color: white;
 	text-align: center;
+  align-self: center;
 }
 
 #userName{
