Fixed path on submit review that wasnt working

--- a/views/Anime.hbs
+++ b/views/Anime.hbs
@@ -29,7 +29,7 @@
 
 	<script type="text/javascript" src="/js/Anime.js"></script>
 	<script type="text/javascript" src="/js/changeLogin.js"></script>
-	 <script>var x = "{{userName}}"; update(x);</script>
+	 <script>var x = "{{userName}}"; update(x);guy = x</script>
 	<script> var name = "{{animeName}}";load(name);</script>
 </body>
 
