--- a/public/style/mainPage.css
+++ b/public/style/mainPage.css
@@ -198,7 +198,7 @@ input[type=submit]:hover {
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 5px;
-  width: 50px;
+  width: 80%;
   margin: 10px;
   margin-top: 30%;
   vertical-align: middle
