Removed edit button and added anime and grade to review list in user profile

--- a/views/User_Profile.hbs
+++ b/views/User_Profile.hbs
@@ -49,9 +49,9 @@
  	<ul id = "reviewlist">
  	</ul>
  </div>
-<form id="editProfile">
+<!-- <form id="editProfile">
  	<button type="button" id="edit_profile">Edit Profile</button>
- </form>
+ </form> -->
 
  <script type="text/javascript" src="/js/User_Profile.js"></script>
  <script type="text/javascript" src="/js/changeLogin.js"></script>
